syntax = "proto3";
package sample;

import "google/protobuf/any.proto";

option java_package = "com.javalive09.sample.protoc.file";
option java_outer_classname = "VideoItem3";

message VideoBean3 {
    string vid = 1;
    string title = 2;
    int32 pay_type = 4;

    string pic = 3;
    //reserved 3; //reserved test

    repeated string episode = 5; //repeated test

    google.protobuf.Any details = 6; //Any test   pack,unpack
}

// Video，加上一个info
message ExtendInfo {
    string info = 1;
    map<string, Project> projects = 2;
    oneof other {   //oneof test
        string type = 3;
        string subTitle = 4;
    }
}

message Project{
    string name = 1;
}
